// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refresh function first test 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`refresh function second test 1`] = `
<RCTScrollView
  onRefresh={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "position": "absolute",
              "width": 400,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 0.8,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 44,
            "justifyContent": "space-between",
            "left": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          }
        }
      >
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-back-btn"
        >
          <View
            accessibilityLabel="Back"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingRight": 31,
              }
            }
          >
            <Image
              source={1}
              style={undefined}
            />
          </View>
        </TouchableOpacity>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
            ]
          }
        >
          rn 101
        </Text>
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-edit-course-btn"
        >
          <View
            accessibilityLabel="Settings"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingLeft": 20,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "resizeMode": "contain",
                  "tintColor": "white",
                }
              }
            />
          </View>
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Spring 2017
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`render without course 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`renders correctly 1`] = `
<RCTScrollView
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "position": "absolute",
              "width": 400,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 0.8,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 44,
            "justifyContent": "space-between",
            "left": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          }
        }
      >
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-back-btn"
        >
          <View
            accessibilityLabel="Back"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingRight": 31,
              }
            }
          >
            <Image
              source={1}
              style={undefined}
            />
          </View>
        </TouchableOpacity>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
            ]
          }
        >
          rn 101
        </Text>
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-edit-course-btn"
        >
          <View
            accessibilityLabel="Settings"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingLeft": 20,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "resizeMode": "contain",
                  "tintColor": "white",
                }
              }
            />
          </View>
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Spring 2017
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "height": 54,
            },
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="courses-details.tab-touchable-row-assignments"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "marginRight": 8,
                  "resizeMode": "contain",
                },
                Object {
                  "height": 20,
                  "tintColor": undefined,
                  "width": 21,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders correctly without tabs 1`] = `
<RCTScrollView
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "position": "absolute",
              "width": 400,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 0.8,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 44,
            "justifyContent": "space-between",
            "left": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          }
        }
      >
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-back-btn"
        >
          <View
            accessibilityLabel="Back"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingRight": 31,
              }
            }
          >
            <Image
              source={1}
              style={undefined}
            />
          </View>
        </TouchableOpacity>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
            ]
          }
        >
          rn 101
        </Text>
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-edit-course-btn"
        >
          <View
            accessibilityLabel="Settings"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingLeft": 20,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "resizeMode": "contain",
                  "tintColor": "white",
                }
              }
            />
          </View>
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Spring 2017
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`renders with empty image url 1`] = `
<RCTScrollView
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 44,
            "justifyContent": "space-between",
            "left": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          }
        }
      >
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-back-btn"
        >
          <View
            accessibilityLabel="Back"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingRight": 31,
              }
            }
          >
            <Image
              source={1}
              style={undefined}
            />
          </View>
        </TouchableOpacity>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
            ]
          }
        >
          rn 101
        </Text>
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-edit-course-btn"
        >
          <View
            accessibilityLabel="Settings"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingLeft": 20,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "resizeMode": "contain",
                  "tintColor": "white",
                }
              }
            />
          </View>
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Spring 2017
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "height": 54,
            },
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="courses-details.tab-touchable-row-assignments"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "marginRight": 8,
                  "resizeMode": "contain",
                },
                Object {
                  "height": 20,
                  "tintColor": undefined,
                  "width": 21,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders with image url 1`] = `
<RCTScrollView
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "http://www.fillmurray.com/100/100",
            }
          }
          style={
            Object {
              "height": 235,
              "position": "absolute",
              "width": 400,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 0.8,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 44,
            "justifyContent": "space-between",
            "left": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          }
        }
      >
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-back-btn"
        >
          <View
            accessibilityLabel="Back"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingRight": 31,
              }
            }
          >
            <Image
              source={1}
              style={undefined}
            />
          </View>
        </TouchableOpacity>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
            ]
          }
        >
          rn 101
        </Text>
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-edit-course-btn"
        >
          <View
            accessibilityLabel="Settings"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingLeft": 20,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "resizeMode": "contain",
                  "tintColor": "white",
                }
              }
            />
          </View>
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Spring 2017
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "height": 54,
            },
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="courses-details.tab-touchable-row-assignments"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "marginRight": 8,
                  "resizeMode": "contain",
                },
                Object {
                  "height": 20,
                  "tintColor": undefined,
                  "width": 21,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders without image url 1`] = `
<RCTScrollView
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 44,
            "justifyContent": "space-between",
            "left": 0,
            "paddingLeft": 10,
            "paddingRight": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          }
        }
      >
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-back-btn"
        >
          <View
            accessibilityLabel="Back"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingRight": 31,
              }
            }
          >
            <Image
              source={1}
              style={undefined}
            />
          </View>
        </TouchableOpacity>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "fontFamily": ".SFUIDisplay-bold",
              },
            ]
          }
        >
          rn 101
        </Text>
        <TouchableOpacity
          accessibilityComponentType="button"
          accessibilityTraits="button"
          activeOpacity={0.2}
          onLongPress={undefined}
          onPress={[Function]}
          onPressIn={undefined}
          onPressOut={undefined}
          style={undefined}
          testID="course-details.navigation-edit-course-btn"
        >
          <View
            accessibilityLabel="Settings"
            accessibilityTraits="button"
            accessible={true}
            style={
              Object {
                "paddingLeft": 20,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "resizeMode": "contain",
                  "tintColor": "white",
                }
              }
            />
          </View>
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Spring 2017
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "height": 54,
            },
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="courses-details.tab-touchable-row-assignments"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "marginRight": 8,
                  "resizeMode": "contain",
                },
                Object {
                  "height": 20,
                  "tintColor": undefined,
                  "width": 21,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</RCTScrollView>
`;
